--- a/gb/25/10/8/n14612127.md
+++ b/gb/25/10/8/n14612127.md
@@ -7,52 +7,48 @@
 <hr>
 <p>【大纪元2025年10月08日讯】（大纪元记者林丞奕、常怀仁台湾台北报导）辉达（NVIDIA）计划在台北市北投士林科技园区（北士科）T17、T18地块兴建海外总部“辉达星群”，却因土地地上权属于新光人寿（新寿）所有而持续卡关。针对这个难题，总统赖清德证实行政院已介入协处，内政部也将积极协助处理专案办法。然而，国民党议员则忧心，若市府与新寿合意解约，恐面临倒贴新寿上百亿元解约金，反成了“图利新寿”的冤大头。</p>
 <p>国民党议员游淑慧分析，辉达、新光人寿与台北市政府三方各有不同诉求，形成难解的三角关系。若这三方诉求难以同时满足，不如由辉达与北市府直接对接。她认为，北市府并不怕协助辉达会被说是“图利”，因为协助辉达就是图利台湾的护国产业；但市府真正担心的是图利新寿。</p>
-<figure id="attachment_14612129" aria-describedby="caption-attachment-14612129" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14612129-800580.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14612129" src="https://i.epochtimes.com/assets/uploads/2025/10/id14612129-800580-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14612129" class="wp-caption-text">民进党政策会执行长吴思瑶。资料照。（宋碧龙／大纪元）</figcaption></figure>
+<figure id="attachment_14612129" aria-describedby="caption-attachment-14612129" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14612129-800580.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14612129" src="https://i.epochtimes.com/assets/uploads/2025/10/id14612129-800580-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14612129" class="wp-caption-text">民进党政策会执行长吴思瑶。资料照。（宋碧龙／大纪元）</figcaption></figure>
 <h2>新寿索赔百亿元引发争议</h2>
-<p>此案的核心争议点在于新寿所求的巨额补偿金。游淑慧根据市府资料指出，新寿在T17、T18案至今共缴交约32.73亿元的权利金与租金。但先前却传出，若市府与新寿合意解约，新寿要求补偿金高达140亿元，足足是实付金额的4倍以上。</p>
+<p>
+此案的核心争议点在于新寿所求的巨额补偿金。游淑慧根据市府资料指出，新寿在T17、T18案至今共缴交约32.73亿元的权利金与租金。但先前却传出，若市府与新寿合意解约，新寿要求补偿金高达140亿元，足足是实付金额的4倍以上。</p>
 <p>游淑慧质疑，新寿标地后并未开发，若仅归还空地，却能获利百亿元，这样法律及民意会支持吗？她更担忧，若市府放行新寿直接将土地移转给辉达，届时新寿也可能向辉达索取高价，北市府等同于“背书”让新寿大赚一笔。</p>
-<p>简言之，新寿的如意算盘是：合意解约就跟北市府要解约补偿金，直接转约就跟辉达要转约补偿金。游淑慧担忧，无论最终走向如何，谁来支付这140亿元，都可能成为冤大头。</p>
+<p>简言之，新寿的如意算盘是：合意解约就跟北市府要解约补偿金，直接转约就跟辉达要转约补偿金。游淑慧担忧，无论最终走向如何，谁来支付这140亿元，都可能成为冤大头。
+</p>
 <h2>内政部将拟专案办法解套</h2>
-<p>面对北士科案的僵局，中央已决定介入。立委王世坚在民进党中常会中质疑台北市长蒋万安处理不力，完全被财团牵制。总统赖清德则回应，行政院已经出手帮忙。</p>
+面对北士科案的僵局，中央已决定介入。立委王世坚在民进党中常会中质疑台北市长蒋万安处理不力，完全被财团牵制。总统赖清德则回应，行政院已经出手帮忙。</p>
 <p>民进党政策会执行长吴思瑶补充说明，台北市政府曾对地上权能否专案发给辉达的适法性有疑虑，并发函询问内政部。内政部已回函指出，若北市府要采专案设定地上权给辉达，需依据《区段征收的地上权处理办法》，拟定专案办法即可执行。</p>
-<p>吴思瑶表示，台北市政府已将相关草案送交内政部，内政部接下来会积极协助处理和核备这个办法，为辉达总部案的解套带来一线曙光。</p>
+<p>吴思瑶表示，台北市政府已将相关草案送交内政部，内政部接下来会积极协助处理和核备这个办法，为辉达总部案的解套带来一线曙光。
 <h2>辉达也不排除其他地设点</h2>
-<p>辉达海外旗舰总部因土地权属与法规问题迟迟无法定案，不仅新北市长侯友宜日前招手，桃园市长张善政、高雄市长陈其迈也积极喊话，盼辉达进驻。经济部长龚明鑫8日受访时表示，辉达的态度也不排除落脚其他地方，一切由业者考量，政府乐见国际科技大厂在台设立总部或研发中心。◇</p>
+辉达海外旗舰总部因土地权属与法规问题迟迟无法定案，不仅新北市长侯友宜日前招手，桃园市长张善政、高雄市长陈其迈也积极喊话，盼辉达进驻。经济部长龚明鑫8日受访时表示，辉达的态度也不排除落脚其他地方，一切由业者考量，政府乐见国际科技大厂在台设立总部或研发中心。◇</p>
 <p>责任编辑：玉珍</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/15/n13997467.md#1">游淑慧：酿中捷事故建商 北市建案2年开罚30次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/18/n14333721.md#1">新寿副董座洪士琪吁支持新新并 创造四赢局面</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546438.md#1">游淑慧建议台风假 改由内政部决定</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/22/n14578390.md#1">台湾大纪元日报廿年特展 上百政商界人士见证</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/2/n14607525.md#1">辉达北士科总部卡关 新寿四声明盼直接移转地上权</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/2/n14607527.md#1">辉达驻进北市科恐破局？ 侯友宜：我们愿意配合</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/7/n14611247.md#1">辉达海外总部设北士科卡关 立委招手：欢迎来高雄</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615344.md#1">撤离计划需县长同意 刘世芳：先清查保全户</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615337.md#1">文科女生跨足光电领域 光学专家推跨域育才</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615288.md#1">灾害撤离各公所自行负责？ 资源盘点跳过花县府要中央帮忙</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651258.md#1">大华府急难救助协会举办防诈讲座　提升侨胞识诈能力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646219.md#1">2026年侨务委员会海外青年语文研习班开放报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637130.md#1">2025大华府地区华语文推广重点聚落研讨会 隆重登场 圆满举行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637123.md#1">华府民俗文化种子教师研习3D果冻艺术创作</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/6/n11704921.md#1" target="_blank">启明：共产党注定灭亡</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/27/n9325401.md#1" target="_blank">林展翔：迫害法轮功责任人入美将面临制裁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/2/n10356748.md#1" target="_blank">林辉：并未救国的“五四运动”只是胡闹而已</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/30/n14605659.md#1">不老的中秋节 那些代代不老的中秋故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610664.md#1">诗词九首 中秋敬颂师恩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/15/n14595067.md#1">【古道人生】相貌丑陋的他让表弟冒名相亲 弄假成真</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610757.md#1">【未解之谜】不可思议的胎梦 孩子与父母的神奇缘分</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610810.md#1">夫妻之义</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/11/n14614403.md#1">【百年真相】莫雄：从孙中山信徒到中共特务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/11/n14614407.md#1">【时政春秋】北京升级稀土战 背后原因为何？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/12/n14614847.md#1">【重播】以色列发言人就人质协议举行简报会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/11/n14614270.md#1">中国企业家正神秘消失 每周一人被抓</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613881.md#1">【佳音时刻】从炫富到炫破产 他们经历了什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613677.md#1">中国经济调查：繁华退去后的经济萧条</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613961.md#1">大陆男星杨洋晒度假素颜照 炸裂手机壳成焦点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/12/n14614535.md#1">谁害了于朦胧？疑似范世锜微博帖文藏玄机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613600.md#1">崔宇植难得当有钱人 与庭沼珉上演浪漫喜剧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613917.md#1">疑受于朦胧坠亡案影响 范世锜紧急取消演唱会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/11/n14614484.md#1">黄秋生曾想与吴慷仁合作 时隔2年态度急转</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613567.md#1">专家：吃富含这一物的食物 有助于降低血压</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613486.md#1">羊比人多的英国小岛征求新居民 管理200只羊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/19/n14555595.md#1">【梁厨美食】生蚝芫荽“煎鸡蛋”～主厨特色菜！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/12/n14614646.md#1">如何让生活充满欢笑？ 心理学家教你5招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615048.md#1">浴室里的这3样东西 千万别共用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10079917.md#1">腊八的来源与风俗：吃了腊八饭就把年来办！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/8/2/n3332566.md#1">守信重义 等到迟来的好姻缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685999.md#1">揭示真实的米开朗基罗壁画色彩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688423.md#1">【百年真相】习亲提24个亿元贪官 酿七大问题</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688343.md#1">【重播】高市早苗会晤来访英首相并举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688656.md#1">【时事金扫描】伊朗多地被炸 美以斩首开始？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687842.md#1">为何金价暴跌 创40年来最大单日跌幅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687999.md#1">军方缺席中共政治局会议 专家析内讧后遗症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688147.md#1">中共吁官兵支持处理张又侠 被指证军心不稳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687150.md#1">儿子遭庾澄庆不回信息 伊能静帮前夫打圆场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687077.md#1">女星金晨被爆驾车肇事逃逸 疑让助理顶包惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687186.md#1">遭王祖蓝挑战身高 大陆歌手周深幽默回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687329.md#1">占星家披露2026年最幸运的几个日子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687470.md#1">专家解析嫉妒损害伴侣关系的3种方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/10/8/n14612127.htm">辉达总部卡关 三角难题待解</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/10/8/n14612127.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
